Revert TextPressure integration, restore original font

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                 <div class="container">
                     <div class="gp-hero-top">
                         <div class="gp-hero-name">
-                            <h1 class="gp-title"></h1>
+                            <h1 class="gp-title">
+                                <span class="reveal-line">Reuben</span>
+                                <span class="reveal-line">Binu George</span>
+                            </h1>
                             <div class="gp-subtitle">
                                 <span class="reveal-line">Gaming Enthusiast |</span>
                                 <span class="reveal-line">Tech Explorer</span>
