--- a/index.html
+++ b/index.html
@@ -110,20 +110,17 @@
                                 scripts, creating engaging web interfaces, or working on academic projects, I'm always
                                 eager to learn and push the boundaries of what's possible.
                             </p>
-                            <div class="gp-skill-grid">
-                                <div class="gp-skill-col">
-                                    <div class="gp-mini">Core</div>
-                                    <div class="gp-skill">C++</div>
-                                    <div class="gp-skill">Lua</div>
-                                    <div class="gp-skill">C#</div>
-                                    <div class="gp-skill">Python</div>
-                                </div>
-                                <div class="gp-skill-col">
-                                    <div class="gp-mini">Stack</div>
-                                    <div class="gp-skill">Unity</div>
-                                    <div class="gp-skill">Unreal</div>
-                                    <div class="gp-skill">Docker</div>
-                                    <div class="gp-skill">Git</div>
+
+                            <!-- Skills Marquee -->
+                            <div class="marquee gp-skill-marquee" aria-hidden="true">
+                                <div class="marquee-track">
+                                    <span>C++ •</span><span>Lua •</span><span>C# •</span><span>Python •</span>
+                                    <span>Unity •</span><span>Unreal •</span><span>Docker •</span><span>Git •</span>
+                                    <span>React •</span><span>GSAP •</span><span>Three.js •</span><span>Node.js •</span>
+                                    <!-- Duplicated for loop -->
+                                    <span>C++ •</span><span>Lua •</span><span>C# •</span><span>Python •</span>
+                                    <span>Unity •</span><span>Unreal •</span><span>Docker •</span><span>Git •</span>
+                                    <span>React •</span><span>GSAP •</span><span>Three.js •</span><span>Node.js •</span>
                                 </div>
                             </div>
                         </div>
