Fix: Hard Reset & Cleanup of index.html to OG Structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./src/style.css?v=21">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-
 </head>
 
 <body>
@@ -82,8 +81,6 @@
                             </div>
                         </div>
                     </div>
-
-                    <!-- Marquee Removed as requested -->
 
                     <div class="gp-hero-bottom">
                         <div class="scroll-down-indicator">
@@ -266,7 +263,7 @@
                 </div>
             </section>
 
-            <!-- Contact Section (New) -->
+            <!-- Contact Section -->
             <section id="contact" class="gp-contact">
                 <div class="container">
                     <div class="gp-contact-grid">
@@ -298,8 +295,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- UI Section Removed -->
 
             <!-- Footer -->
             <footer class="gp-footer">
@@ -349,8 +344,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Contact Modal Removed -->
 
     <!-- Main JS (GSAP Imported) -->
     <script type="module" src="/src/main.js"></script>
