--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="container">
                     <div class="gp-cases-top">
                         <div class="gp-cases-meta">
-                            <div class="gp-mini">Cases (3) • Archive (0)</div>
+                            <div class="gp-mini">Cases (4) • Archive (0)</div>
                         </div>
                     </div>
 
@@ -214,6 +214,34 @@
                                     </div>
                                     <div class="gp-case-actions">
                                         <span class="gp-chip">View Project</span>
+                                        <span class="gp-chip">Details</span>
+                                    </div>
+                                </div>
+                            </a>
+                        </article>
+
+                        <!-- Project 4 -->
+                        <article class="gp-case gp-case-4" data-case>
+                            <div class="gp-case-head">
+                                <div class="gp-case-title marquee" aria-hidden="true">
+                                    <div class="marquee-track">
+                                        <span>HAUNTED HOUSE •</span><span>HAUNTED HOUSE •</span><span>HAUNTED HOUSE
+                                            •</span><span>HAUNTED HOUSE •</span>
+                                        <span>HAUNTED HOUSE •</span><span>HAUNTED HOUSE •</span><span>HAUNTED HOUSE
+                                            •</span><span>HAUNTED HOUSE •</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <a class="gp-case-hit"
+                                href="https://play.unity.com/en/games/4a806e53-26ef-47ef-aa0d-d41d09e9e12d/reuben"
+                                target="_blank" rel="noreferrer">
+                                <div class="gp-case-body">
+                                    <div class="gp-case-tags">
+                                        <span>Unity</span><span>C#</span><span>3D</span><span>WebGL</span>
+                                    </div>
+                                    <div class="gp-case-actions">
+                                        <span class="gp-chip">Play Game</span>
                                         <span class="gp-chip">Details</span>
                                     </div>
                                 </div>
