--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="canonical" href="https://reubenbg-portfolio.vercel.app/" />
     <!-- Fonts -->
     <!-- Fonts -->
-    <!-- Neofolia is imported in style.css -->
+    <!-- Neofolia is local, Orbitron is fallback -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 </head>
 
